--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "dist": "node_modules/webpack/bin/webpack.js --config webpack.dist.js",
     "docs": "node_modules/jsdoc-to-markdown/bin/cli.js -t docsTemplate.hbs src/REFormsAPI.js > _api.md",
     "prepublish": "npm run dist",
-    "test": "NODE_ENV=test mocha --watch --compilers js:babel-core/register test/*.spec.js",
-    "karma": "karma start"
+    "test": "NODE_ENV=test mocha --watch --compilers js:babel-core/register test/*.spec.js"
   },
   "browserify": {
     "transform": [
@@ -83,8 +82,7 @@
     "globals": {
       "describe": true,
       "expect": true,
-      "it": true,
-      "TestUtils": true
+      "it": true
     },
     "plugins": [
       "react"
@@ -105,18 +103,9 @@
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.9.0",
     "jsdoc-to-markdown": "1.3.4",
-    "karma": "0.13.22",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-cli": "0.1.2",
-    "karma-mocha": "0.2.2",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "1.7.0",
     "mocha": "2.4.5",
     "node-sass": "3.5.1",
     "postcss-loader": "0.8.2",
-    "react-addons-test-utils": "15.0.1",
     "react-hot-loader": "1.3.0",
     "rimraf": "2.5.2",
     "sass-loader": "3.2.0",
