--- a/package.json
+++ b/package.json
@@ -113,9 +113,7 @@
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1",
-    "webpack-merge": "0.12.0"
-  },
-  "dependencies": {
+    "webpack-merge": "0.12.0",
     "react": "15.0.1",
     "react-bootstrap": "0.29.0",
     "react-dom": "15.0.1",
