--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dist": "node_modules/webpack/bin/webpack.js --config webpack.dist.js",
     "docs": "node_modules/jsdoc-to-markdown/bin/cli.js -t docsTemplate.hbs src/REFormsAPI.js > _api.md",
     "prepublish": "npm run dist",
-    "test": "karma start"
+    "test": "NODE_ENV=test mocha --watch --compilers js:babel-core/register test/*.spec.js"
   },
   "browserify": {
     "transform": [
@@ -39,7 +39,8 @@
       "es2015",
       "stage-0",
       "react"
-    ]
+    ],
+    "plugins": [ "array-includes" ]
   },
   "eslintConfig": {
     "rules": {
@@ -82,8 +83,7 @@
     "globals": {
       "describe": true,
       "expect": true,
-      "it": true,
-      "TestUtils": true
+      "it": true
     },
     "plugins": [
       "react"
@@ -94,6 +94,7 @@
     "babel-core": "6.7.7",
     "babel-eslint": "6.0.3",
     "babel-loader": "6.2.4",
+    "babel-plugin-array-includes": "^2.0.3",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
@@ -104,33 +105,22 @@
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.9.0",
     "jsdoc-to-markdown": "1.3.4",
-    "karma": "0.13.22",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-cli": "0.1.2",
-    "karma-mocha": "0.2.2",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "1.7.0",
     "mocha": "2.4.5",
     "node-sass": "3.5.1",
     "postcss-loader": "0.8.2",
-    "react-addons-test-utils": "15.0.1",
+    "react": "15.0.1",
+    "react-bootstrap": "0.29.0",
+    "react-dom": "15.0.1",
     "react-hot-loader": "1.3.0",
+    "react-redux": "4.4.5",
+    "redux": "3.5.1",
     "rimraf": "2.5.2",
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
+    "validator": "5.0.0",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1",
     "webpack-merge": "0.12.0"
-  },
-  "dependencies": {
-    "react": "15.0.1",
-    "react-bootstrap": "0.29.0",
-    "react-dom": "15.0.1",
-    "react-redux": "4.4.5",
-    "redux": "3.5.1",
-    "validator": "5.0.0"
   }
 }
