--- a/package.json
+++ b/package.json
@@ -124,5 +124,9 @@
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1",
     "webpack-merge": "0.12.0"
+  },
+  "dependencies": {
+    "react-router": "^2.4.0",
+    "react-router-bootstrap": "^0.23.0"
   }
 }
