--- a/package.json
+++ b/package.json
@@ -92,37 +92,39 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "6.3.6",
-    "babel-core": "6.7.7",
-    "babel-eslint": "6.0.3",
-    "babel-loader": "6.2.4",
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
     "babel-plugin-array-includes": "^2.0.3",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-0": "6.5.0",
-    "chai": "3.5.0",
-    "css-loader": "0.23.1",
-    "eslint-plugin-react": "5.0.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
-    "html-webpack-plugin": "2.9.0",
-    "jsdoc-to-markdown": "1.3.4",
-    "mocha": "2.4.5",
-    "node-sass": "3.5.1",
-    "postcss-loader": "0.8.2",
-    "react": "15.0.1",
-    "react-bootstrap": "0.29.0",
-    "react-dom": "15.0.1",
-    "react-hot-loader": "1.3.0",
-    "react-redux": "4.4.5",
-    "redux": "3.5.1",
-    "rimraf": "2.5.2",
-    "sass-loader": "3.2.0",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "validator": "5.0.0",
-    "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1",
-    "webpack-merge": "0.12.0"
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
+    "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.19.0",
+    "jsdoc-to-markdown": "^1.3.6",
+    "material-ui": "^0.15.0",
+    "mocha": "^2.5.3",
+    "node-sass": "^3.7.0",
+    "postcss-loader": "^0.9.1",
+    "react": "^15.1.0",
+    "react-bootstrap": "^0.29.4",
+    "react-dom": "^15.1.0",
+    "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.5",
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
+    "rimraf": "^2.5.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "validator": "^5.4.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
   }
 }
